WP&WRs: Introduce second gas limit for Accumulate

--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -165,7 +165,7 @@ The single-service accumulation function, $\Delta_1$, transforms an initial stat
           &\isa{b}{\H\bm{?}}, \isa{u}{\N_G}
         \end{aligned}
       } \\
-      (\mathbf{o}, \mathbf{w}, \mathbf{f}, s) &\mapsto \Psi_A(\mathbf{o}, s, g, \mathbf{p})
+      (\mathbf{o}, \mathbf{w}, \mathbf{f}, s) &\mapsto \Psi_A(\mathbf{o}, \tau', s, g, \mathbf{p})
     \end{aligned} \\
     &\text{where:} \\
     &\ \begin{aligned}
@@ -204,7 +204,7 @@ We have denoted the sequence of implied transfers as $\mathbf{t}$, ordered inter
 
 The second intermediate state $\accountspostxfer$ may then be defined with all the deferred effects of the transfers applied:
 \begin{equation}
-  \accountspostxfer = \{ s \mapsto \Psi_T(\accountspostacc, s, R(\mathbf{t}, s)) \mid (s \mapsto a) \in \accountspostacc \}
+  \accountspostxfer = \{ s \mapsto \Psi_T(\accountspostacc, \tau', s, R(\mathbf{t}, s)) \mid (s \mapsto a) \in \accountspostacc \}
 \end{equation}
 
 Note that $\Psi_T$ is defined in appendix \ref{sec:ontransferinvocation} such that it results in $\accountspostacc[d]$, \ie no difference to the account's intermediate state, if $R(d) = []$, \ie said account received no transfers.
