--- a/text/guaranteeing.tex
+++ b/text/guaranteeing.tex
@@ -24,7 +24,7 @@ Such guarantors may safely create and distribute the payload $(s, v)$. The compo
   l = \mathcal{H}(\se(c, r))
 \end{equation}
 
-To maximize profit, the guarantor should require the work result meets all expectations which are in place during the guarantee extrinsic described in section \ref{sec:workreportguarantees}. This includes contextual validity, inclusion of the authorization in the authorization pool, and ensuring total gas is at most $\mathsf{G}_A$. No doing so does not result in punishment, but will prevent the block author from including the package and so reduces rewards.
+To maximize profit, the guarantor should require the work result meets all expectations which are in place during the guarantee extrinsic described in section \ref{sec:workreportguarantees}. This includes contextual validity and inclusion of the authorization in the authorization pool. No doing so does not result in punishment, but will prevent the block author from including the package and so reduces rewards.
 
 Advanced nodes may maximize the likelihood that their reports will be includable on-chain by attempting to predict the state of the chain at the time that the report will get to the block author. Naive nodes may simply use the current chain head when verifying the work-report. To minimize work done, nodes should make all such evaluations \emph{prior} to evaluating the $\Psi_R$ function to calculate the report's work results.
 
