WP&WRs: Limit size of IsAuthorized output

--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -154,7 +154,7 @@ We note that all newly added service indices, defined in the above context as $\
 
 The single-service accumulation function, $\Delta_1$, transforms an initial state-context, sequence of work-reports and a service index into an alterations state-context, a sequence of \emph{transfers}, a possible accumulation-output and the actual \textsc{pvm} gas used. This function wrangles the work-items of a particular service from a set of work-reports and invokes \textsc{pvm} execution with said data:
 \begin{align}
-  &\mathbb{O} \equiv \tuple{\isa{o}{\Y \cup \mathbb{J}}, \isa{l}{\H}, \isa{k}{\H}, \isa{a}{\Y}}
+  &\mathbb{O} \equiv \tuple{\isa{\mathbf{o}}{\Y \cup \mathbb{J}}, \isa{l}{\H}, \isa{k}{\H}, \isa{\mathbf{a}}{\Y_{\mathsf{W}_U}}}
 \end{align}
 \begin{align}
     &\Delta_1 \colon \left\{\;\begin{aligned}
@@ -171,8 +171,8 @@ The single-service accumulation function, $\Delta_1$, transforms an initial stat
     &\ \begin{aligned}
       g &= \subifnone(\mathbf{f}_s, 0) + \!\!\!\!\sum_{w \in \mathbf{w}, \mathbf{r} \in w_\mathbf{r} , \mathbf{r}_s = s}\!\!\!\!(\mathbf{r}_g) \\
       \mathbf{p} &= \left[ \tup{\begin{alignedat}{3}
-        \is{o&}{\mathbf{r}_o}\ts\is{&l&}{\mathbf{r}_l}\ts\\
-        \is{a&}{w_o}\ts\is{&k&}{(w_s)_h}
+        \is{\mathbf{o}&}{\mathbf{r}_\mathbf{o}}\ts\is{&l&}{\mathbf{r}_l}\ts\\
+        \is{\mathbf{a}&}{w_\mathbf{o}}\ts\is{&k&}{(w_s)_h}
       \end{alignedat}}
       \,\middle\vert\ 
       w \orderedin \mathbf{w}, \mathbf{r} \orderedin w_\mathbf{r}, \mathbf{r}_s = s
