--- a/text/reporting_assurance.tex
+++ b/text/reporting_assurance.tex
@@ -22,19 +22,20 @@ As usual, intermediate and posterior values ($\rho^\dagger$, $\rho^\ddagger$, $\
 
 \subsubsection{Work Report}\label{sec:workreport}
 A work-report, of the set $\mathbb{W}$, is defined as a tuple of the work-package specification $s$, the refinement context $x$, and the core-index (\ie on which the work is done) as well as the authorizer hash $a$ and output $\mathbf{o}$, a segment-root lookup dictionary $\wr¬srlookup$, and finally the results of the evaluation of each of the items in the package $\mathbf{r}$, which is always at least one item and may be no more than $\mathsf{I}$ items. Formally:
-\begin{equation}\label{eq:workreport}
-\mathbb{W} \equiv \tuple{
+\begin{align}\label{eq:workreport}
+\mathbb{W} &\equiv \tuple{
   \begin{aligned}
     &\isa{s}{\mathbb{S}},\ 
     \isa{x}{\mathbb{X}},\ 
     \isa{c}{\N_\mathsf{C}},\ 
     \isa{a}{\H},\\
-    &\isa{\mathbf{o}}{\Y},\ 
+    &\isa{\mathbf{o}}{\Y_{\mathsf{W}_U}},\ 
     \isa{\wr¬srlookup}{\dict{\H}{\H}},\ 
     \isa{\mathbf{r}}{\seq{\mathbb{L}}_{1:\mathsf{I}}}
   \end{aligned}
-}
-\end{equation}
+}\\
+\mathsf{W}_U &\equiv 128
+\end{align}
 
 % TODO: places where w \in \mathbb{W} : w_o should be replaced with w_\mathbf{o} and w_r with w_\mathbf{r}
 
@@ -73,14 +74,14 @@ We finally come to define a \emph{work result}, $\mathbb{L}$, which is the data 
 
 %TODO: make o bold.
 \begin{align}\label{eq:workresult}
-  \mathbb{L} &\equiv (s \in \N_S, c \in \H, l \in \H, g \in \N_G, o \in \Y \cup \mathbb{J})
+  \mathbb{L} &\equiv (s \in \N_S, c \in \H, l \in \H, g \in \N_G, \mathbf{o} \in \Y \cup \mathbb{J})
 \end{align}
 
 Work results are a tuple comprising several items. Firstly $s$, the index of the service whose state is to be altered and thus whose refine code was already executed. We include the hash of the code of the service at the time of being reported $c$, which must be accurately predicted within the work-report according to equation \ref{eq:reportcodesarecorrect};
 
 Next, the hash of the payload ($l$) within the work item which was executed in the refine stage to give this result. This has no immediate relevance, but is something provided to the accumulation logic of the service. We follow with the gas prioritization ratio $g$ used when determining how much gas should be allocated to execute of this item's accumulate.
 
-Finally, there is the output or error of the execution of the code $o$, which may be either an octet sequence in case it was successful, or a member of the set $\mathbb{J}$, if not. This latter set is defined as the set of possible errors, formally:
+Finally, there is the output or error of the execution of the code $\mathbf{o}$, which may be either an octet sequence in case it was successful, or a member of the set $\mathbb{J}$, if not. This latter set is defined as the set of possible errors, formally:
 \begin{align}
   \mathbb{J} \in \{ \oog, \panic, \token{BAD}, \token{BIG} \}
 \end{align}
