--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -286,6 +286,7 @@ Here, the prime annotation indicates posterior state. Individual components may 
   \item[$\mathsf{W}_P = 6$] The number of erasure-coded pieces in a segment.
   \item[$\mathsf{W}_R = 96\cdot2^{10}$] The maximum size of an encoded work-report in octets.
   \item[$\mathsf{W}_T = 128$] The size of a transfer memo in octets.
+  \item[$\mathsf{W}_U = 128$] The maximum size of an authorizer output in octets.
   \item[$\mathsf{X}$] Context strings, see below.
   \item[$\mathsf{Y} = 500$] The number of slots into an epoch at which ticket-submission ends.
   \item[$\mathsf{Z}_A = 2$] The \textsc{pvm} dynamic address alignment factor. See equation \ref{eq:jumptablealignment}.
