WP&WRs: More sensible Work Report size limit

--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -284,7 +284,7 @@ Here, the prime annotation indicates posterior state. Individual components may 
   \item[$\mathsf{W}_G = \mathsf{W}_P\mathsf{W}_E = 4104$] The size of a segment in octets.
   \item[$\mathsf{W}_M = 2^{11}$] The maximum number of entries in a work-package manifest.
   \item[$\mathsf{W}_P = 6$] The number of erasure-coded pieces in a segment.
-  \item[$\mathsf{W}_R = 96\cdot2^{10}$] The maximum size of an encoded work-report in octets.
+  \item[$\mathsf{W}_R = 48\cdot2^{10}$] The maximum total size of all output blobs in a work-report, in octets.
   \item[$\mathsf{W}_T = 128$] The size of a transfer memo in octets.
   \item[$\mathsf{W}_U = 128$] The maximum size of an authorizer output in octets.
   \item[$\mathsf{X}$] Context strings, see below.
