Remove unneeded bound on authorizer output

--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -154,7 +154,7 @@ We note that all newly added service indices, defined in the above context as $\
 
 The single-service accumulation function, $\Delta_1$, transforms an initial state-context, sequence of work-reports and a service index into an alterations state-context, a sequence of \emph{transfers}, a possible accumulation-output and the actual \textsc{pvm} gas used. This function wrangles the work-items of a particular service from a set of work-reports and invokes \textsc{pvm} execution with said data:
 \begin{align}
-  &\mathbb{O} \equiv \tuple{\isa{\mathbf{o}}{\Y \cup \mathbb{J}}, \isa{l}{\H}, \isa{k}{\H}, \isa{\mathbf{a}}{\Y_{\mathsf{W}_U}}}
+  &\mathbb{O} \equiv \tuple{\isa{\mathbf{o}}{\Y \cup \mathbb{J}}, \isa{l}{\H}, \isa{k}{\H}, \isa{\mathbf{a}}{\Y}}
 \end{align}
 \begin{align}
     &\Delta_1 \colon \left\{\;\begin{aligned}
