--- a/text/pvm.tex
+++ b/text/pvm.tex
@@ -124,7 +124,7 @@ We denote this set, as opcode indices rather than names, as $T$. We define the i
 We must now define the single-step \textsc{pvm} state-transition function $\Psi_1$:
 \begin{equation}
   \Psi_1\colon \left\{\begin{aligned}
-    (\Y, \mathbb{B}, \seq{\N_R}, \N_R, \N_G, \regs, \ram) &\to (\{\panic, \halt, \continue \} \cup \{\fault, \host\} \times \N_R, \Z_G, \regs, \ram)\\
+    (\Y, \mathbb{B}, \seq{\N_R}, \N_R, \N_G, \regs, \ram) &\to (\{\panic, \halt, \continue \} \cup \{\fault, \host\} \times \N_R, \N_R, \Z_G, \regs, \ram)\\
     (\mathbf{c}, \mathbf{k}, \mathbf{j}, \imath, \gascounter, \registers, \mem) &\mapsto (\varepsilon, \imath', \gascounter', \registers', \mem')
   \end{aligned}\right.
 \end{equation}
@@ -650,7 +650,7 @@ An extended version of the \textsc{pvm} invocation which is able to progress an 
     \end{aligned}
     }
     &\to
-    \tuple{\{\panic, \oog, \halt\} \cup \{\fault\} \times \N_R, \Z_G, \regs, \ram, X}\\
+    \tuple{\{\panic, \oog, \halt\} \cup \{\fault\} \times \N_R, \N_R, \Z_G, \regs, \ram, X}\\
     (\mathbf{c}, \imath, \gascounter, \registers, \mem, f, \mathbf{x}) &\mapsto \begin{cases}
       \multicolumn{2}{l}{\text{let }(\varepsilon', \imath', \gascounter', \registers', \mem') = \Psi(\mathbf{c}, \imath, \gascounter, \registers, \mem):} \\[8pt]
       (\varepsilon', \imath', \gascounter', \registers', \mem', \mathbf{x}) &\when \varepsilon' \in \{ \halt, \panic, \oog \} \cup \{\fault\} \times \N_R \\[4pt]
@@ -751,7 +751,7 @@ Thus, if the above conditions cannot be satisfied with unique values, then the r
 The four instances where the \textsc{pvm} is utilized each expect to be able to pass argument data in and receive some return data back. We thus define the common \textsc{pvm} program-argument invocation function $\Psi_M$:
 \begin{align}
   \Psi_M&\colon \left\{\begin{aligned}
-    (\Y, \N, \N_G, \Y_{:\mathsf{Z}_I}, \Omega\langle X \rangle, X) &\to (\N_G, \Y \cup \{\panic, \oog\}, X)\\
+    (\Y, \N_R, \N_G, \Y_{:\mathsf{Z}_I}, \Omega\langle X \rangle, X) &\to (\N_G, \Y \cup \{\panic, \oog\}, X)\\
     (\mathbf{p}, \imath, \gascounter, \mathbf{a}, f, \mathbf{x}) &\mapsto \begin{cases}
       (\gascounter, \panic, \mathbf{x}) &\when Y(\mathbf{p}) = \none\\
       R(\Psi_H(\mathbf{c}, \imath, \gascounter, \registers, \mem, f, \mathbf{x})) &\when Y(\mathbf{p}) = (\mathbf{c}, \registers, \mem)
