--- a/text/merklization.tex
+++ b/text/merklization.tex
@@ -233,6 +233,19 @@ We define the \textsc{mmr} encoding function as $\se_M$:
   }
 \end{equation}
 
+We define the \textsc{mmr} super-peak function as $\mathcal{M}_R$:
+\begin{equation}
+  \mathcal{M}_R\colon\deffunc{
+    \seq{\H?} &\to \H \\
+    \mathbf{b} &\mapsto \begin{cases}
+      \H_0 &\when |\mathbf{h}| = 0\\
+      \mathbf{h}_0 &\when |\mathbf{h}| = 1\\
+      \mathcal{H}_K(\token{\$node} \concat \mathcal{M}_R(\mathbf{h}_{\dots|\mathbf{b}|-1}) \concat \mathbf{h}_{|\mathbf{b}|-1}) &\otherwise \\
+      \multicolumn{2}{l}{\where \mathbf{h} = \sq{h \mid h \orderedin \mathbf{b}, h \ne \none}}
+    \end{cases}
+  }
+\end{equation}
+
 %\begin{equation}
 %  \left\{\mathbb{H}\right.
 %\end{equation}
