WP&WRs/Merklization: Clean up functions and correct use of page prefix.

--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -137,9 +137,9 @@
   \item[$\mathcal{H}_K(\dots)$] The Keccak 256-bit hash function. See section \ref{sec:cryptography}.
   %  \item[$\mathcal{G}$] Unused.
   %  \item[$\mathcal{I}$] Unused.
-  %  \item[$\mathcal{J}$] Unused.
+  \item[$\mathcal{J}_x$] The justification path to a specific $2^x$ size page of a constant-depth Merkle tree. See equation \ref{eq:constantdepthsubtreemerklejust}.
   \item[$\mathcal{K}(\dots)$] The domain, or set of keys, of a dictionary. See section \ref{sec:dictionaries}.
-  %  \item[$\mathcal{L}$] Unused.
+  \item[$\mathcal{L}_x$] The $2^x$ size page function for a constant-depth Merkle tree. See equation \ref{eq:constantdepthsubtreemerkleleafpage}.
   \item[$\mathcal{M}(\dots)$] The constant-depth binary Merklization function. See appendix \ref{sec:merklization}.
   \item[$\mathcal{M}_B(\dots)$] The well-balanced binary Merklization function. See appendix \ref{sec:merklization}.
   \item[$\mathcal{M}_\sigma(\dots)$] The state Merklization function. See appendix \ref{sec:statemerklization}.
