--- a/text/work_packages_and_reports.tex
+++ b/text/work_packages_and_reports.tex
@@ -147,15 +147,13 @@ We define the paged-proofs function $\pagedproofs$ which accepts a series of exp
     \mathbf{s} \mapsto \,&\sq{
       \mathcal{P}_l(\se(
         \var{\mathcal{J}_6(\mathbf{s}, i)},
-        \var{\mathcal{H}^\#(\mathbf{s}_{i\dots+64})}
+        \var{\mathcal{L}_6(\mathbf{s}, i)}
       ))
-      \mid i \orderedin 64\cdot\N_{\ceil{\nicefrac{|\mathbf{s}|}{64}}}
+      \mid i \orderedin \N_{\ceil{\nicefrac{|\mathbf{s}|}{64}}}
     } \\
     & \where l = \mathsf{W}_G
   \end{aligned}\right.\!\!\!\!
 \end{equation}
-
-Note: in the case that $|\mathbf{s}|$ is not a multiple of 64, then the term $\mathbf{s}_{i\dots+64}$ will correctly refer to fewer than 64 elements if it is the final page.
 
 \subsection{Computation of Work Results}\label{sec:computeworkresult}
 
