--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -261,10 +261,10 @@ Here, the prime annotation indicates posterior state. Individual components may 
   \item[$\mathsf{D} = 28,800$] The period in timeslots after which an unreferenced preimage may be expunged.
   \item[$\mathsf{E} = 600$] The length of an epoch in timeslots.
   \item[$\mathsf{F} = 2$] The audit bias factor, the expected number of additional validators who will audit a work-report in the following tranche for each no-show in the previous.
-  \item[$\mathsf{G}_A = 100,000$] The total gas allocated to a core for Accumulation.
+  \item[$\mathsf{G}_A = 100,000$] The gas allocated to invoke a work-report's Accumulation logic.
   \item[$\mathsf{G}_I = 1,000,000$] The gas allocated to invoke a work-package's Is-Authorized logic.
-  \item[$\mathsf{G}_R = 500,000,000$] The total gas allocated for a work-package's Refine logic.
-  \item[$\mathsf{G}_T = 341,000,000$] The total gas allocated across all cores for Accumulation. Should be no smaller than $\mathsf{G}_A\cdot\mathsf{C} + \sum_{g \in \mathcal{V}(\chi_\mathbf{g})}(g)$.
+  \item[$\mathsf{G}_R = 500,000,000$] The gas allocated to invoke a work-package's Refine logic.
+  \item[$\mathsf{G}_T = 35,000,000$] The total gas allocated across for all Accumulation. Should be no smaller than $\mathsf{G}_A\cdot\mathsf{C} + \sum_{g \in \mathcal{V}(\chi_\mathbf{g})}(g)$.
   \item[$\mathsf{H} = 8$] The size of recent history, in blocks.
   \item[$\mathsf{I} = 4$] The maximum amount of work items in a package.
   \item[$\mathsf{J} = 8$] The maximum sum of dependency items in a work-report.
